[gd_scene load_steps=36 format=2]

[ext_resource path="res://Keqing.tscn" type="PackedScene" id=1]
[ext_resource path="res://Candies1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Candy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hori and Miyamura.tscn" type="PackedScene" id=4]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://CandiesSCore.gd" type="Script" id=6]
[ext_resource path="res://Demo1.gd" type="Script" id=7]
[ext_resource path="res://FloorandRrght.gd" type="Script" id=8]
[ext_resource path="res://Wall.gd" type="Script" id=9]
[ext_resource path="res://RoofandLeft.gd" type="Script" id=10]
[ext_resource path="res://Wall2.gd" type="Script" id=11]
[ext_resource path="res://Candies1.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 545, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 305 )

[sub_resource type="Animation" id=9]
resource_name = "Invisible"
length = 3.0
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 545, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 305.5 )

[sub_resource type="Animation" id=11]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 2
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 183 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 215, 6 )

[sub_resource type="Animation" id=13]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 119 )

[sub_resource type="Animation" id=15]
resource_name = "Invisible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Visible"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Appearing"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Fading"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="Demo1" type="Node2D"]
script = ExtResource( 7 )

[node name="RoofandLeft" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 10 )

[node name="Roof" type="CollisionShape2D" parent="RoofandLeft"]
position = Vector2( 535, 0 )
shape = SubResource( 1 )

[node name="Left" type="CollisionShape2D" parent="RoofandLeft"]
position = Vector2( 0, 295 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="RoofandLeft"]

[node name="ColorRect" type="ColorRect" parent="RoofandLeft/CanvasLayer"]
margin_left = -9.0
margin_top = -10.0
margin_right = 1080.0
margin_bottom = 9.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="RoofandLeft/CanvasLayer"]
margin_left = -10.0
margin_top = -10.0
margin_right = 12.0
margin_bottom = 599.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="RoofandLeft/CanvasLayer"]
root_node = NodePath("../ColorRect")
anims/Invisible = SubResource( 9 )
anims/RESET = SubResource( 10 )
anims/Visible = SubResource( 20 )

[node name="Timer" type="Timer" parent="RoofandLeft"]
wait_time = 3.0
autostart = true

[node name="FloorandRrght" type="Area2D" parent="."]
position = Vector2( 1080, 600 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 8 )

[node name="Floor" type="CollisionShape2D" parent="FloorandRrght"]
position = Vector2( -535, 0 )
shape = SubResource( 3 )

[node name="Right" type="CollisionShape2D" parent="FloorandRrght"]
position = Vector2( 0, -295.5 )
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="FloorandRrght"]

[node name="ColorRect" type="ColorRect" parent="FloorandRrght/CanvasLayer"]
margin_top = 589.0
margin_right = 1091.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="FloorandRrght/CanvasLayer"]
margin_left = 1070.0
margin_right = 1091.0
margin_bottom = 611.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FloorandRrght/CanvasLayer"]
anims/Invisible = SubResource( 11 )
anims/RESET = SubResource( 12 )
anims/Visible = SubResource( 21 )

[node name="Timer" type="Timer" parent="FloorandRrght"]
wait_time = 3.0
autostart = true

[node name="Keqing" parent="." instance=ExtResource( 1 )]
position = Vector2( 572, 286 )

[node name="Candy" parent="." instance=ExtResource( 3 )]
position = Vector2( 484, 79 )

[node name="Candies" parent="." instance=ExtResource( 2 )]
position = Vector2( 314, 57 )
script = ExtResource( 12 )

[node name="Candies2" parent="." instance=ExtResource( 2 )]
position = Vector2( 982, 501 )

[node name="HoriandMiyamura" parent="." instance=ExtResource( 4 )]
position = Vector2( 161, 153 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 37.0
margin_top = 31.0
margin_right = 194.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 5 )
text = "CANDIES: ##"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" type="Area2D" parent="."]
position = Vector2( 408, 183 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 9 )

[node name="CollisionWall" type="CollisionShape2D" parent="Wall"]
shape = SubResource( 6 )

[node name="CollisionWall2" type="CollisionShape2D" parent="Wall"]
position = Vector2( 209, 0 )
shape = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="Wall"]

[node name="ColorRect" type="ColorRect" parent="Wall/CanvasLayer"]
margin_left = 402.0
margin_top = 1.0
margin_right = 415.0
margin_bottom = 366.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Wall/CanvasLayer"]
margin_left = 401.0
margin_top = 176.0
margin_right = 833.0
margin_bottom = 189.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wall/CanvasLayer"]
anims/Invisible = SubResource( 13 )
anims/RESET = SubResource( 14 )
anims/Visible = SubResource( 22 )

[node name="Timer" type="Timer" parent="Wall"]
wait_time = 3.0
autostart = true

[node name="Wall2" type="Area2D" parent="."]
position = Vector2( 800, 492 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="Wall2"]

[node name="ColorRect" type="ColorRect" parent="Wall2/CanvasLayer"]
margin_left = 795.0
margin_top = 372.0
margin_right = 805.0
margin_bottom = 591.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wall2/CanvasLayer"]
root_node = NodePath("../ColorRect")
anims/Invisible = SubResource( 15 )
anims/RESET = SubResource( 16 )
anims/Visible = SubResource( 23 )

[node name="Timer" type="Timer" parent="Wall2"]
wait_time = 3.0
autostart = true

[node name="SceneAnimation" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="SceneAnimation"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneAnimation"]
autoplay = "Appearing"
anims/Appearing = SubResource( 17 )
anims/Fading = SubResource( 19 )
anims/RESET = SubResource( 18 )

[connection signal="Difficult" from="." to="RoofandLeft" method="_on_Demo1_Difficult"]
[connection signal="Difficult" from="." to="FloorandRrght" method="_on_Demo1_Difficult"]
[connection signal="Difficult" from="." to="Wall" method="_on_Demo1_Difficult"]
[connection signal="Difficult" from="." to="Wall2" method="_on_Demo1_Difficult"]
[connection signal="animation_finished" from="RoofandLeft/CanvasLayer/AnimationPlayer" to="RoofandLeft" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="RoofandLeft/CanvasLayer/AnimationPlayer" to="RoofandLeft" method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="RoofandLeft/Timer" to="RoofandLeft" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="FloorandRrght/CanvasLayer/AnimationPlayer" to="FloorandRrght" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="FloorandRrght/CanvasLayer/AnimationPlayer" to="FloorandRrght" method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="FloorandRrght/Timer" to="FloorandRrght" method="_on_Timer_timeout"]
[connection signal="change" from="Candy" to="." method="_on_Candy_change"]
[connection signal="change" from="Candy" to="Keqing" method="_on_Candy_change"]
[connection signal="change" from="Candy" to="HoriandMiyamura" method="_on_Candy_change"]
[connection signal="gameover" from="HoriandMiyamura" to="." method="_on_HoriandMiyamura_gameover"]
[connection signal="losing" from="HoriandMiyamura" to="Keqing" method="_on_HoriandMiyamura_losing"]
[connection signal="animation_finished" from="Wall/CanvasLayer/AnimationPlayer" to="Wall" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Wall/CanvasLayer/AnimationPlayer" to="Wall" method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Wall/Timer" to="Wall" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Wall2/CanvasLayer/AnimationPlayer" to="Wall2" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Wall2/CanvasLayer/AnimationPlayer" to="Wall2" method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Wall2/Timer" to="Wall2" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="SceneAnimation/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
